# valorant-discord-bot

./: .env  .env.example  .gitignore  .replit  DISCLAIMER.md  Dockerfile  LICENSE  README.md  README_th.md  README_ภาษาไทย.md  accounts.txt  app.json  bot.py  config.json  install.bat  keep_alive.py  launcher.py  main.py  pyproject.toml  replit_db_clean.py  replit_main.py  requirements-dev.txt  requirements.txt  settings.json  setup.py  start.bat
.github/: FUNDING.yml
.github/workflows/: docker-image.yml  docker-prerelease.yml  docker-release.yml
assets/font/: font_url.txt
cogs/: admin.py  error_handler.py  errors.py  events.py  loop_store.py  notify.py  valorant.py
cogs/valorant/: __init__.py  _abc.py  context_menu.py  events.py  notify.py  valorant.py
core/: bot.py  checks.py  cog.py  config.py  db.py  i18n.py  translator.py  tree.py
core/ui/: embed.py  modal.py
languages/: _guide.txt  _reference.txt  de.json  en-US.json  es-ES.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  pt-PT.json  ru.json  th-TH.json  th.json  tr.json  vi.json  zh-CN.json  zh_TW.json
lib/riot_auth/: __init__.py  auth.py  errors.py
locale/app_commands/: en-US.yaml
utils/: api.py  api_endpoint.py  auth.py  cache.py  checks.py  embed.py  emoji.py  errors.py  i18n.py  json_loader.py  locale_v2.py  pillow.py  store.py  useful.py  view.py  view_notify.py
utils/valorant/: __init__.py  auth.py  cache.py  db.py  embed.py  endpoint.py  local.py  resources.py  useful.py  view.py
valorant/: enums.py  http.py
