[project]
name = "latte-maid"
requires-python = ">=3.8"

[tool.pyright]
include = ["cogs"]
exclude = ["**/__pycache__", ".git", ".ruff_cache", ".venv"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnusedVariable = "warning"

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [".git", ".ruff_cache", ".venv"]

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade,
    "SIM",
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
